<resources>
    <string name="app_name">pocketEC</string>
    <string name="sign_up">注册</string>
    <string name="hint_name">请输入你的姓名</string>
    <string name="hint_email">请输入你的邮箱</string>
    <string name="hint_password">请输入你的密码</string>
    <string name="hint_rePassword">请重新输入密码</string>
    <string name="sign_up_login">已有账号?点击登录</string>
    <string name="faw_user_circle">{faw-user-circle}</string>
    <string name="faw_envelope">{faw-envelope}</string>
    <string name="faw_unlock_alt">{faw-unlock-alt}</string>
    <string name="faw_unlock">{faw-unlock}</string>
    <string name="faw_chevron_left">{faw-chevron-left}</string>
    <string name="faw_get_pocket">{faw-get-pocket}</string>
    <string name="sign_in">登录</string>
    <string name="sign_in_signUP">没有账号?点击注册</string>
    <string name="faw_weixin">{faw-weixin}</string>
    <string name="faw_qq">{faw-qq}</string>
    <string name="faw_weibo">{faw-weibo}</string>
    <string name="forget_password">忘记密码?</string>
    <string name="find_password">找回密码</string>
    <string name="hint_signUp_email">请输入注册时的邮箱</string>
    <string name="send_verify">发送验证码</string>
    <string name="hint_verify">请输入验证码</string>
    <string name="next_step">下一步</string>
    <string name="message">消息</string>
    <string name="shopping_cart">购物车</string>
    <string name="personal">个人中心</string>
    <string name="faw_bars">{faw-bars}</string>
    <string name="faw_search">{faw-search}</string>
    <string name="hint_search">请输入搜索内容</string>
    <string name="myCollection">我的收藏</string>
    <string name="myAttention">我的关注</string>
    <string name="myFriends">我的好友</string>
    <string name="dididi">dididi</string>
    <string name="yc512yc_163_com">yc512yc@163.com</string>
    <string name="myAccount">我的账户</string>
    <string name="setting">设置</string>
    <string name="help">帮助和反馈</string>
    <string name="logOut">登出账号</string>
    <string name="discover">发现</string>
    <string name="photography">摄影</string>
    <string name="purchase_agency">代购</string>
    <string name="paint">手绘</string>
    <string name="comment_dots">{faw-comment-dots}</string>
    <string name="faw_plus">{faw-plus}</string>
    <string name="top">置顶</string>
    <string name="delete">删除</string>
    <string name="faw_circle">{faw-circle}</string>
    <string name="faw_check_circle">{faw-check-circle}</string>
    <string name="add_collect">加入收藏</string>
    <string name="_1">1</string>
    <string name="yuan">￥</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="allSelected">全选</string>
    <string name="allIn">共计:</string>
    <string name="_yuan">￥0</string>
    <string name="compute_price">结算</string>
    <string name="all">全部</string>
    <string name="best">精选</string>
    <string name="store">商家</string>
    <string name="sales">销量</string>
    <string name="enterShop"><![CDATA[进店 >]]></string>
    <string name="faw_th_list">{faw-th-list}</string>
    <string name="faw_gg">{faw-gg}</string>
    <string name="alreadybuy">人已购买</string>
    <string name="evaluation">好评率:</string>
    <string name="send">发送</string>
    <string name="faw_user">{faw-user}</string>
    <string name="faw_microphone">{faw-microphone}</string>
    <string name="faw_chevron_circle_up">{faw-chevron-circle-up}</string>
    <string name="test">test</string>
    <string name="faw_wallet">{faw-wallet}</string>
    <string name="wallet">钱包</string>
    <string name="comment">评价</string>
    <string name="order">订单</string>
    <string name="faw_collect">{faw-gratipay}</string>
    <string name="collect">收藏</string>
    <string name="faw_attention">{faw-thumbs-up}</string>
    <string name="attention">关注</string>
    <string name="faw_shoe_prints">{faw-shoe-prints}</string>
    <string name="foot">足迹</string>
    <string name="faw_shopping_basket">{faw-shopping-basket}</string>
    <string name="faw_trash">{faw-trash}</string>
    <string name="price_range">价格区间:</string>
    <string name="range_to">~</string>
    <string name="go"><![CDATA[>]]></string>
    <string name="user_sign_in">用户登录</string>
    <string name="edit_account">请输入你的账户</string>
    <string name="edit_password">请输入你的密码</string>
    <string name="user_sign_up">用户注册</string>
    <string name="pocket">POCKET</string>
    <string name="back">返回</string>
    <string name="made_by_dididi_studio">MADE BY DIDIDI STUDIO</string>
    <string name="reset_password">重设密码</string>
    <string name="camera">camera</string>
    <string name="album">album</string>
    <string name="video_chat">chat</string>
    <string name="transfer">transfer</string>
    <string name="favorite">favorite</string>
    <string name="choose_account">选择帐号</string>
    <string name="tim_test_login">测试账号登录</string>
    <string-array name="spinner_goods_sort">
        <item>综合排序</item>
        <item>好评优先</item>
        <item>价格降序</item>
        <item>价格升序</item>
    </string-array>
    <string-array name="spinner_tim_account">
        <item>dididi</item>
        <item>lalala</item>
        <item>hahaha</item>
        <item>wawawa</item>
        <item>sasasa</item>
        <item>dadada</item>
        <item>mememe</item>
        <item>huhuhu</item>
        <item>tatata</item>
        <item>bababa</item>
        <item>gagaga</item>
        <item>xixixi</item>
    </string-array>

</resources>
