<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/home_item_nav_menu_discover_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_item_nav_menu_discover"
            android:icon="@mipmap/discover"
            android:title="@string/discover" />
    </group>

    <group
        android:id="@+id/home_item_nav_menu_my_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_item_nav_menu_collect"
            android:icon="@mipmap/collection"
            android:title="@string/myCollection" />
        <item
            android:id="@+id/home_item_nav_menu_attention"
            android:icon="@mipmap/attention"
            android:title="@string/myAttention" />
        <item
            android:id="@+id/home_item_nav_menu_friends"
            android:icon="@mipmap/friends"
            android:title="@string/myFriends" />
    </group>

    <group
        android:id="@+id/home_item_nav_menu_account_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_item_nav_menu_account"
            android:icon="@mipmap/account"
            android:title="@string/myAccount" />
        <item
            android:id="@+id/home_item_nav_menu_exit"
            android:icon="@mipmap/logout"
            android:title="@string/logOut" />

    </group>

    <group
        android:id="@+id/home_item_nav_menu_setting_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_item_nav_menu_setting"
            android:icon="@mipmap/setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/home_item_nav_menu_help"
            android:icon="@mipmap/help"
            android:title="@string/help" />
    </group>

</menu>