<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--toolbar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/find_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/toolbarColor">

        <com.mikepenz.iconics.view.IconicsTextView
            android:id="@+id/find_password_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/faw_chevron_left"
            android:textColor="@color/textColorLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:text="@string/find_password"
            android:textColor="@color/textColorLight"
            android:textSize="@dimen/toolBarTextSize" />
    </android.support.v7.widget.Toolbar>
    <!--邮箱-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <com.mikepenz.iconics.view.IconicsTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/faw_envelope"
            android:textColor="@color/textColorDark" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/find_password_email_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:hint="@string/hint_signUp_email"
            android:textSize="@dimen/buttonTextSize" />
    </android.support.v7.widget.LinearLayoutCompat>
    <!--验证码-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/find_password_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:hint="@string/hint_verify"
            android:textSize="@dimen/buttonTextSize" />

        <Button
            android:id="@+id/find_password_send_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/normalButtonColor"
            android:text="@string/send_verify"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/buttonTextSize" />
    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/find_password_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/next_step"
        android:textColor="@color/textColorDark"
        android:textSize="@dimen/buttonTextSize" />


</android.support.v7.widget.LinearLayoutCompat>