<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/item_shopCart_count_decrease"
        android:layout_width="@dimen/smallIconWidth"
        android:layout_height="@dimen/smallIconHeight"
        android:gravity="center"
        android:text="@string/decrease"
        android:textColor="@color/textColorDark"
        android:textSize="@dimen/tinyTextSize" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/item_shopCart_count_number"
        android:layout_width="@dimen/smallIconWidth"
        android:layout_height="@dimen/smallIconHeight"
        android:layout_toEndOf="@id/item_shopCart_count_decrease"
        android:layout_toRightOf="@id/item_shopCart_count_decrease"
        android:gravity="center"
        android:text="@string/_1" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/item_shopCart_count_increase"
        android:layout_width="@dimen/smallIconWidth"
        android:layout_height="@dimen/smallIconHeight"
        android:layout_toEndOf="@id/item_shopCart_count_number"
        android:layout_toRightOf="@id/item_shopCart_count_number"
        android:gravity="center"
        android:text="@string/increase"
        android:textSize="@dimen/tinyTextSize" />
</RelativeLayout>